# fridgly

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/fridgly-domain/: Cargo.toml
crates/fridgly-domain/src/: error.rs  lib.rs  locale.rs  meals.rs  product.rs  repository.rs
crates/fridgly-domain/src/item/: mod.rs  model.rs  urgency.rs
crates/fridgly-infra/: Cargo.toml
crates/fridgly-infra/src/: lib.rs  meals.rs  openfoodfacts.rs  pool.rs  postgres.rs
crates/fridgly-web/: Cargo.toml
crates/fridgly-web/src/: app.rs  config.rs  error.rs  i18n.rs  main.rs  state.rs
crates/fridgly-web/src/features/: mod.rs  pages.rs  products.rs
crates/fridgly-web/src/features/items/: forms.rs  handlers.rs  mod.rs  routes.rs  view.rs
crates/fridgly-web/src/features/meals/: handlers.rs  mod.rs  routes.rs  view.rs
crates/fridgly-web/static/: app.js  style.css
crates/fridgly-web/templates/: base.html  edit_form.html  index.html  item_row.html  list.html  macros.html  meal_suggestions.html  meals.html  shopping.html
migrations/: 0001_init.sql  0002_subunits.sql
